fix: brighter char bg in dark mode

--- a/characters/style.css
+++ b/characters/style.css
@@ -97,7 +97,7 @@ body {
 
 @media (prefers-color-scheme: dark) {
   body {
-	background: #121212;
+	background: #303030;
 	color: white;
   }
 }
